# rust-book-exercises

./: .gitignore  Cargo.toml  README.md
boxt/src/: main.rs
closures/src/: main.rs
deref_drop/src/: main.rs
enums/src/: main.rs
enums_match/: Cargo.toml
enums_match/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
iterators/src/: main.rs
lifetimes/src/: main.rs
loops/src/: main.rs
modules_restaurant/src/: lib.rs
ownership/src/: main.rs
rc/src/: main.rs
rc_plus_refcell/: Cargo.toml
rc_plus_refcell/src/: main.rs
rectangles_methods/: Cargo.toml
rectangles_methods/src/: main.rs
refcell/src/: main.rs
reference_cycles/src/: main.rs
slices/src/: main.rs
structs/src/: main.rs
tests/src/: lib.rs
tests/tests/: integration_test.rs
traits/src/: main.rs
weak/src/: main.rs
