[workspace]

members = [
    "hello_cargo",
    "guessing_game",
    "variables",
    "functions",
    "branches",
    "loops",
    "ownership",
    "ownership_functions",
    "references_borrowing",
    "slices",
    "structs",
    "rectangles",
    "rectangles_methods",
    "enums",
    "enums_match",
    "modules",
    "modules_restaurant",
    "generics",
    "traits",
    "lifetimes",
    "tests",
    "closures",
    "iterators",
    "boxt",
    "deref_drop",
    "rc",
    "refcell",
    "rc_plus_refcell",
]
